samples/_failures_safe/1761281654_6238c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16a1744e.c: In function ‘main’:
./samples/SAFE/__tmp_16a1744e.c:151:12: error: missing terminating " character
  151 |     printf("2. Matrix
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_16a1744e.c:151:5: error: expected expression at end of input
  151 |     printf("2. Matrix
      |     ^~~~~~
./samples/SAFE/__tmp_16a1744e.c:151:5: error: expected declaration or statement at end of input
